--- a/frontend/teams/src/style.css
+++ b/frontend/teams/src/style.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.open-sans{
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
