--- a/frontend/teams/src/style.css
+++ b/frontend/teams/src/style.css
@@ -1,7 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .open-sans{
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
+.main-nav{
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 800;
+}
+
+.header{
+    background-blend-mode: lighten;
+    border-bottom: 1px solid #ddd;
+    border-top: 2px solid var(--color-secondary);
+    box-shadow: 0 3px 2px -2px hsla(0,0%,78%,.2);
+    display: flex;
+    height: 4rem;
+    padding: 1rem;
+    will-change: transform;
+}
+
+.logostyle{
+    align-items: center;
+    border-radius: 5%;
+    display: flex;
+    font-weight: 300;
+    height: 100%;
+    letter-spacing: 1px;
+    margin-left: 0.8rem;
+    padding: 0.3rem;
+    transition: all .3s ease-in;
+}
+
+/* pagination styling */
+
+.pagination-container {
+    display: flex;
+    column-gap: 10px;
+}
+
+.paginate-buttons {
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color: var(--color-background);
+    border: 1px solid var(--color-background);
+    color: var(--color-text);
+}
+
+.paginate-buttons:hover {
+    background-color: #d8d8d8;
+}
+
+.active-page {
+    background-color: var(--color-text);
+    border: 1px solid var(--color-text);
+    color: var(--color-background);
+}
+
+.active-page:hover {
+    background-color: var(--color-text);
+}
+
+/* Table styling */
+table {
+    width: 100%;
+}
+td, th {
+    text-align: center;
+    padding: 0.5rem;
+}
+
+tr:nth-child(odd) {
+    background-color: var(--color-text);
+    color: var(--color-background);
 }
