--- a/frontend/teams/src/style.css
+++ b/frontend/teams/src/style.css
@@ -86,3 +86,7 @@ tr:nth-child(odd) {
     background-color: var(--color-text);
     color: var(--color-background);
 }
+
+.button {
+    background-color: var(--color-text);
+}
